--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explorin Github</title>
+    <title>Exploring Github</title>
 </head>
 <body>
-    <h1>Explorin Github</h1>
+    <h1>Exploring Github</h1>
+    <div>
+        <h3>For every other time</h3>
+        <p>git add .</p>
+        <p>git commit -m "your meaningful message"</p>
+        <p>git push</p>
+
+    </div>
 </body>
 </html>
