--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <p>git commit -m "your meaningful message"</p>
         <p>git push</p>
 
+
     </div>
+    <img src="images/WhatsApp Image 2025-03-28 at 17.55.47_9b6a0ffb.jpg" alt="">
 </body>
 </html>
